Closed
Bug 692203
Opened 14 years ago
Closed 14 years ago
"ABORT: Rendering should be disabled" with markerHeight="0"
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
mozilla10
People
(Reporter: jruderman, Assigned: longsonr)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
###!!! ABORT: Rendering should be disabled: 'viewbox.width > 0.0f && viewbox.height > 0.0f', file content/svg/content/src/nsSVGMarkerElement.cpp, line 383
Guessing this is a regression from bug 687830, which added the assertion.
| Reporter | ||
Comment 1•14 years ago
|
||
| Assignee | ||
Comment 2•14 years ago
|
||
Assignee: nobody → longsonr
Attachment #564974 -
Flags: review?(dholbert)
Comment 3•14 years ago
|
||
Comment on attachment 564974 [details] [diff] [review]
patch
Looks good, r=me.
Could you add one additional crashtest, using 0 markerWidth (instead of markerHeight)? We abort on that too, right now.
Attachment #564974 -
Flags: review?(dholbert) → review+
| Assignee | ||
Comment 4•14 years ago
|
||
Comment 5•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla10
You need to log in
before you can comment on or make changes to this bug.
Description
•