Bug 692203 - Covered region must be empty if markerHeight or markerWidth=0. r=dholbert